<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/actualizar"
    android:layout_height="match_parent"
    tools:context="com.example.monica.peluchitos.InicioFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:paddingLeft="@dimen/button_horizontal_margin"
            android:paddingRight="@dimen/button_horizontal_margin"
            android:paddingTop="@dimen/button_vertical_margin"
            android:paddingBottom="@dimen/button_vertical_margin"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/welcome"
                android:textColor="@color/greensmart"
                android:textSize="25dp"
                android:textStyle="bold|italic"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="@dimen/button_horizontal_margin"
            android:paddingRight="@dimen/button_horizontal_margin"
            android:paddingTop="@dimen/button_vertical_margin"
            android:paddingBottom="@dimen/button_vertical_margin"
            android:orientation="vertical"
            android:gravity="center">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:id="@+id/programarclases"
                android:background="@color/cyansmart"
                android:text="@string/programarclases"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="@dimen/button_horizontal_margin"
            android:paddingRight="@dimen/button_horizontal_margin"
            android:paddingTop="@dimen/button_vertical_margin"
            android:paddingBottom="@dimen/button_vertical_margin"
            android:orientation="vertical"
            android:gravity="center">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:id="@+id/eliminarclases"
                android:background="@color/cyansmart"
                android:text="@string/eliminarclases"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:paddingLeft="@dimen/button_horizontal_margin"
            android:paddingRight="@dimen/button_horizontal_margin"
            android:paddingTop="@dimen/button_vertical_margin"
            android:paddingBottom="@dimen/button_vertical_margin"
            android:orientation="vertical"
            android:gravity="center">

        </LinearLayout>
    </LinearLayout>
</FrameLayout>
