<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.monica.peluchitos.CuentaFragment">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@color/greensmart"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/smartsearch"
                android:textSize="25dp"
                android:textStyle="bold|italic"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Modificar Información"
                android:textSize="14dp"
                android:textStyle="bold|italic"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true" />
            <LinearLayout android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:paddingLeft="@dimen/list_horizontal_margin"
                android:paddingRight="@dimen/list_horizontal_margin"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="200dp"
                    android:src="@drawable/usuario"
                    android:layout_gravity="center" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:id="@+id/nombrecuenta"
                    android:text="Santiago"
                    android:textSize="20dp"
                    android:gravity="center"/>

            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="@dimen/list_horizontal_margin"
            android:paddingRight="@dimen/list_horizontal_margin"
            android:paddingTop="@dimen/list_vertical_margin"
            android:paddingBottom="@dimen/list_vertical_margin"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/tel"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/correo"/>
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Actualizar"
                    android:background="@color/cyansmart"
                    android:layout_gravity="center"/>

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="0.5">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tel"/>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>
